--- a/profile.html
+++ b/profile.html
@@ -76,7 +76,7 @@
             </div>
 
             <div class="col-md-4">
-                <h4 id="points">Points:</h4>
+                <h4 id="pointsHeading">Points:</h4>
                                 <h4 style="color:orange"><span id="points">135</span></h4>
             </div>
                         
