--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 			<h1>Featured Adventures!</h1>
 		</div>
 		<div class="row featuredAdventures">
-			<div class="col-md-4" style="text-align:center;">
-				<img src="img/torrent.png" class="img-thumbnail">
-				<div style="text-align:center;">
+			<div class="col-md-4">
+				<div class="imgCenter">
+					<img src="img/torrent.png" class="img-thumbnail">
 					<h3>Get 50 Points!</h3>
 					<p>Red River Gorge, KY</p>
 					<!-- Trigger the modal with a button -->
@@ -103,7 +103,23 @@
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 								<h4 class="modal-title">Get 50 Points!</h4> </div>
 							<div class="modal-body">
-								<p>This is the details of Offer Two! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+								<h3>Torrent Falls Climbing Adventure</h3>
+								<p>Torrent Falls Climbing Adventure, located in the Red River Gorge, Kentucky, consists of a Via Ferrata, guided rock climbing, and guided rappelling. If one is looking for fun in high adventure activities, Torrent Falls with its ability to cater individuals, families, and large groups, is the place to come.</p>
+								<p style="text-align:center;">
+									<a href="http://torrentfalls.com/">Click Here for Torrent Falls Website</a><br>
+									
+										1617 North KY 11<br>
+										Campton, KY 41301<br>
+
+										(606) 668-6613<br>
+										nicole@torrentfalls.com<br>
+
+										Season Open: March 1st - Dec 1st<br>
+										Days Open: 7 Days a week<br>
+										Hours: 9am to 5pm<br>
+										Climbing allowed until dusk; Last training session 2 hours before dark<br>
+										Reservations: Required<br>
+								</p>
 								<div style="text-align:center;">
 									<button type="button" class="btn btn-default" style="background-color:#EE7600; color:#fff;">GET REWARD!</button>
 								</div>
@@ -132,7 +148,14 @@
 								<button type="button" class="close" data-dismiss="modal">&times;</button>
 								<h4 class="modal-title">Get 60 Points!</h4> </div>
 							<div class="modal-body">
-								<p>This is the details of Offer Two! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+								<h3>Crash's Landing</h3>
+								<p>Est. 1998  At Crash’s Landing, Inc., Outfitters and Musky Guide Post, we pride ourselves in being able  to provide you with the latest information, techniques and equipment for fishing Kentucky’s famous Cave Run Lake. Musky Guided Fishing Trip with the Pro’s on Cave Run Lake. We will always have a hot cup of coffee waiting for you and would be more than happy to pass along what’s happening on the water. Please don’t forget to stop by and visit us whenever you are in the area! So sit back and enjoy!</p>
+								<p style="text-align:center;">
+									<a href="http://www.crashslanding.com/">Click here for Crash's Landing Website!</a><br>
+									606.780.4260<br>
+									1170 Ky. Hwy. 801 South<br>
+									Morehead, KY  40351<br>
+								</p>
 								<div style="text-align:center;">
 									<button type="button" class="btn btn-default" style="background-color:#EE7600; color:#fff;">GET REWARD!</button>
 								</div>
